--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="layout_marginEnd">8dp</dimen>
     <dimen name="layout_marginStart">8dp</dimen>
     <dimen name="layout_marginTop">8dp</dimen>
+    <dimen name="textSize">64sp</dimen>
 </resources>
